--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Better">
         <activity
-            android:name=".ui.SplashScreen"
+            android:name=".ui.LoginActivity"
+            android:theme="@style/Theme.Better.NoActionBar" />
+        <activity
+            android:name=".ui.SplashActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
