--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
+/.idea/gradle.xml
+/.idea/compiler.xml
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/jarRepositories.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
