--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
 
+    //Material Component
+    implementation 'com.google.android.material:material:1.3.0'
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:26.6.0')
