--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,6 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
-
     defaultConfig {
         applicationId "com.better"
         minSdkVersion 26
@@ -17,7 +15,6 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -37,18 +34,21 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.cardview:cardview:1.0.0"
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
+    // Navigation Component Dependencies
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
+    // Lifecycle Component Dependencies
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
-    //Material Component
+    // Material Component
     implementation 'com.google.android.material:material:1.3.0'
 
     // Import the Firebase BoM
@@ -62,8 +62,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
-    // Glide
+    // Glide 3rd party
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'androidx.annotation:annotation:1.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
