--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     // Glide 3rd party
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    // AnyChart 3rd party
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
 }
